# win

./: .gitignore  .gitmodules  CMakeLists.txt  install  readme.md
include/: debug.h  gl.h  init.h  msleep.h  program.h  sdlinit.h  shader.h  texture.h  time_utils.h  uniform.h  uniformbuf.h  win.h
shaders/: default.frag  default.vert
src/: compile_commands.json  debug.c  gl.c  init.c  main.c  msleep.c  program.c  sdlinit.c  shader.c  template.c  texture.c  time_utils.c  uniform.c  uniformbuf.c  win.c
test/: CMakeLists.txt  uniform.cpp  win.cpp
